# nasac2019-race-detection-competition

./: README.md  case1-opt.bc  case1-opt.ll  case1.ll  case3-opt.ll  tool.cpp
DRace1/: 1.txt  CMakeLists.txt
DRace1/output/: file.txt
DRace1/src/: CMakeLists.txt  main.cpp  tool.cpp  tool.h
DRace1/test/: build.py
DRace1/test/svp_simple_001/: svp_simple_001_001-opt-opt.bc  svp_simple_001_001-opt-opt.ll  svp_simple_001_001-opt.bc  svp_simple_001_001-opt.ll  svp_simple_001_001.bc  svp_simple_001_001.ll
DRace1/test/svp_simple_002/: svp_simple_002_001-opt-opt.bc  svp_simple_002_001-opt-opt.ll  svp_simple_002_001-opt.bc  svp_simple_002_001-opt.ll  svp_simple_002_001.bc  svp_simple_002_001.ll
DRace1/test/svp_simple_003/: svp_simple_003_001-opt-opt.ll  svp_simple_003_001-opt.bc  svp_simple_003_001-opt.ll  svp_simple_003_001.bc  svp_simple_003_001.ll
DRace1/test/svp_simple_004/: svp_simple_004_001-opt-opt.bc  svp_simple_004_001-opt-opt.ll  svp_simple_004_001-opt.ll  svp_simple_004_001.bc  (+1 more)
llvm-api-demo/: CMakeLists.txt  file_version3.txt  main.cpp  process  tool.cpp  tool.h
llvm-api-demo/c-src/: case1.bc  case10.bc  case11.bc  case14.bc  case6.bc  case7.bc  case8.bc  racebench-opt.ll  racebench.bc  racebench.c  result.ll
llvm-api-demo/ir-src/: case4-opt.ll
llvm-api-demo/output/: file.txt  file_version1.txt  file_version2.txt
paper/: acmart.cls  sample-acmsmall.aux  sample-acmsmall.bbl  sample-acmsmall.blg  sample-acmsmall.out  sample-acmsmall.tex  test.bib
paper/body/: introduction.aux  introduction.tex  model.tex
汇报情况/: DRace-v2.pptx  DRace统计.xlsx
(+371 files in other folders)
